# DataminingLibs

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  assemble_libraries.bat  assemble_libraries.sh  build_cmake_unix_make.sh  build_cmake_vs_projects.bat
lib_algorithms/: CMakeLists.txt
lib_algorithms/include/: algorithms_interface.h  lib_algorithms.h  ml_algorithm.h  ml_algorithm_params.h
lib_algorithms/source/: algorithms_interface.cc  gpu_algorithm.cc  gpu_algorithm.h  gpudte.cu  gpudte.h  gpurf.cu  gpurf.h  ml_algorithm.cc  ml_algorithm_params_impl.cc  ml_algorithm_params_impl.h
lib_algorithms/test/: test_gpurf.h
lib_core/: CMakeLists.txt
lib_core/include/: barrier.h  core_interface.h  lib_core.h  lock_free_list.h
lib_core/source/: barrier_impl.cc  barrier_impl.h  core_interface.cc  lock_free_list_impl.cc  lock_free_list_impl.h
lib_data/: CMakeLists.txt
lib_data/include/: data_interface.h  lib_data.h  ml_dataframe.h  ml_resultdata.h
lib_data/source/: data_interface.cc  ml_dataframe_impl.cc  ml_dataframe_impl.h  ml_resultdata_impl.cc  ml_resultdata_impl.h
lib_data/test/: test_dataframe.h
lib_ensembles/: CMakeLists.txt
lib_ensembles/include/: ensembles_interface.h  lib_ensembles.h
lib_ensembles/source/: ensembles_interface.cc  gpudte.cu  gpudte.h  gpudte_algorithm.cc  gpudte_algorithm.h  gpudte_algorithm_shared.cc  gpudte_algorithm_shared.h  gpuert.cu  gpuert.h  gpurf.cu  gpurf.h
lib_ensembles/test/: test_gpuert.h  test_gpurf.h  test_resources.h
lib_gpu/: CMakeLists.txt
lib_gpu/include/: cuda_kernel_helpers.hpp  gpu_device.h  gpu_interface.h  lib_gpu.h
lib_gpu/source/: cuda_kernel_helpers.cu  gpu_device.cc  gpu_device_cuda.cc  gpu_device_cuda.h  gpu_device_opencl.cc  gpu_device_opencl.h  gpu_interface.cc
lib_gpu/test/: test_gpu_device.h
lib_julia/: CMakeLists.txt
lib_julia/include/: julia_interface.h
lib_julia/source/: julia_interface.cc
lib_juliacall/: CMakeLists.txt  copy_shared_libs.bat  julia_to_c.cc
lib_models/: CMakeLists.txt
lib_models/include/: lib_models.h  ml_model.h  models_interface.h
lib_models/source/: ml_model_impl.cc  ml_model_impl.h  models_interface.cc
lib_models/test/: test_ml_model.h
lib_parsing/: CMakeLists.txt
lib_parsing/include/: lib_parsing.h  ml_parser.h  parsing_interface.h
lib_parsing/source/: arff_parser.cc  csv_parser.cc  csv_parser.h  ml_parser.cc  parsing_interface.cc  rds_parser.cc
lib_parsing/test/: test_csv_parsing.h
runnable_test/: CMakeLists.txt  copy_shared_libs.bat  test_main.cc
source_shared/: precomp.h
source_shared/include/: any_type.hpp  datamininglibs.h  global_defines.h  lock_free_list.hpp
